fixed weird spacing errors

--- a/src/general-components/Tool/StepComponent/step-component.scss
+++ b/src/general-components/Tool/StepComponent/step-component.scss
@@ -2,6 +2,10 @@
 
 $tabColor: #6e6e6e;
 
+.stepTabContainer * {
+  word-break: break-all;
+}
+
 .stepContainer > .stepTabContainer, .stepHeaderAccordion {
   margin-bottom: 0.75rem;
 }
